[gd_scene load_steps=22 format=3 uid="uid://ruri8ytnt6k"]

[ext_resource type="Script" uid="uid://dnvc0muxjskkx" path="res://SwitchesAndDoors/door.gd" id="1_bavxp"]
[ext_resource type="Script" uid="uid://nx0nm05072bl" path="res://state_machine.gd" id="3_vgayv"]
[ext_resource type="Script" uid="uid://bfgoxj0jef0x2" path="res://SwitchesAndDoors/state_open.gd" id="4_qyouu"]
[ext_resource type="Script" uid="uid://cmuedsb6wno2w" path="res://SwitchesAndDoors/state_closed.gd" id="4_vsukd"]
[ext_resource type="Script" uid="uid://fxxiwenoiem4" path="res://SwitchesAndDoors/state_opening.gd" id="5_dl3qx"]
[ext_resource type="Script" uid="uid://dnduix8avk80r" path="res://SwitchesAndDoors/state_closing.gd" id="6_fh1vt"]
[ext_resource type="Script" uid="uid://ddoigraqtywoq" path="res://SwitchesAndDoors/state_rev_from_closing.gd" id="8_blgy7"]
[ext_resource type="Texture2D" uid="uid://bafy7qdnjv6t5" path="res://SwitchesAndDoors/Gfx/door_anim.png" id="9_14l4i"]
[ext_resource type="PackedScene" uid="uid://c51o14wratpd3" path="res://SwitchesAndDoors/DoorLookAtPlayer.tscn" id="9_iqyh2"]
[ext_resource type="PackedScene" uid="uid://1votnx34efdj" path="res://EntityComponents/BWShaderSetter.tscn" id="10_c6eg3"]
[ext_resource type="Texture2D" uid="uid://mvtvu0ch35er" path="res://SwitchesAndDoors/Gfx/door_stop.png" id="10_wbtyf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_an4kw"]
size = Vector2(80, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtywp"]
atlas = ExtResource("9_14l4i")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc15k"]
atlas = ExtResource("9_14l4i")
region = Rect2(32, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqyh2"]
atlas = ExtResource("9_14l4i")
region = Rect2(32, 48, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eyo3"]
atlas = ExtResource("9_14l4i")
region = Rect2(0, 48, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8x4p"]
atlas = ExtResource("9_14l4i")
region = Rect2(48, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkubx"]
atlas = ExtResource("9_14l4i")
region = Rect2(48, 48, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml123"]
atlas = ExtResource("9_14l4i")
region = Rect2(16, 48, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqwmo"]
atlas = ExtResource("9_14l4i")
region = Rect2(16, 0, 16, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_q4n6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtywp")
}],
"loop": false,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc15k")
}],
"loop": true,
"name": &"look_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqyh2")
}],
"loop": true,
"name": &"look_left_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eyo3")
}],
"loop": true,
"name": &"look_left_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8x4p")
}],
"loop": true,
"name": &"look_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkubx")
}],
"loop": true,
"name": &"look_right_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml123")
}],
"loop": true,
"name": &"look_right_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqwmo")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[node name="Door" type="AnimatableBody2D" groups=["kills_bullets", "sticky"]]
script = ExtResource("1_bavxp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_an4kw")

[node name="AntiCrushArea" type="Area2D" parent="."]
collision_mask = 12

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_vgayv")
does_print = false

[node name="DoorStateClosed" type="Node" parent="StateMachine"]
script = ExtResource("4_vsukd")

[node name="DoorStateOpen" type="Node" parent="StateMachine"]
script = ExtResource("4_qyouu")

[node name="DoorStateClosing" type="Node" parent="StateMachine"]
script = ExtResource("6_fh1vt")

[node name="DoorStateOpening" type="Node" parent="StateMachine"]
script = ExtResource("5_dl3qx")

[node name="DoorStateRevFromClosing" type="Node" parent="StateMachine"]
script = ExtResource("8_blgy7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = -1
use_parent_material = true
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_q4n6f")
animation = &"closed"

[node name="DoorLookAtPlayer2" parent="AnimatedSprite2D" instance=ExtResource("9_iqyh2")]
scale = Vector2(1, 1)

[node name="DoorStop" type="Sprite2D" parent="."]
use_parent_material = true
scale = Vector2(5, 5)
texture = ExtResource("10_wbtyf")

[node name="BwShaderSetter" parent="." instance=ExtResource("10_c6eg3")]
dark_color = Color(0.211765, 0.133333, 0.105882, 1)
light_color = Color(0.878431, 0.67451, 0.235294, 1)
